--- a/package.json
+++ b/package.json
@@ -6,19 +6,23 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "db:push": "drizzle-kit push",
+    "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
+    "@libsql/client": "^0.17.0",
     "autoprefixer": "^10.4.21",
     "cloudinary": "^2.7.0",
     "cookie": "^1.0.2",
     "dotenv": "^17.0.1",
+    "drizzle-orm": "^0.45.1",
     "jose": "^6.0.11",
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
-    "mongodb": "^6.17.0",
-    "mongoose": "^8.17.2",
     "multer": "^2.0.2",
     "next": "15.3.4",
     "postcss": "^8.5.6",
@@ -34,6 +38,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "drizzle-kit": "^0.31.9",
     "typescript": "^5"
   }
 }
