--- a/package.json
+++ b/package.json
@@ -29,11 +29,11 @@
     "drizzle-orm": "^0.45.1",
     "jose": "^6.0.11",
     "jsonwebtoken": "^9.0.2",
-    "jspdf": "^3.0.1",
+    "jspdf": "^4.1.0",
     "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.564.0",
     "multer": "^2.0.2",
-    "next": "15.3.4",
+    "next": "^15.5.12",
     "next-themes": "^0.4.6",
     "postcss": "^8.5.6",
     "react": "^19.0.0",
