--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start",
     "lint": "next lint",
     "db:generate": "drizzle-kit generate",
-    "db:migrate": "drizzle-kit migrate",
+    "db:migrate": "npx tsx migrate.ts",
     "db:push": "drizzle-kit push",
     "db:studio": "drizzle-kit studio",
     "db:seed": "npx tsx lib/db/seed.ts"
@@ -26,7 +26,7 @@
     "cloudinary": "^2.7.0",
     "clsx": "^2.1.1",
     "cookie": "^1.0.2",
-    "dotenv": "^17.0.1",
+    "dotenv": "^17.3.1",
     "drizzle-orm": "^0.45.1",
     "jose": "^6.0.11",
     "jsonwebtoken": "^9.0.2",
@@ -53,6 +53,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "dotenv-cli": "^11.0.0",
     "drizzle-kit": "^0.31.9",
     "tsx": "^4.21.0",
     "typescript": "^5"
